Add AO SligSpawner, MotionDetector, BackgroundAnimation, LCDStatusBoard Tlv's and change StatsSign name to LCDStatusBoard

--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -123,8 +123,8 @@ SET(AliveLibAESrc
     MainMenu.cpp
     LCDScreen.hpp
     LCDScreen.cpp
-    StatsSign.hpp
-    StatsSign.cpp
+    LCDStatusBoard.hpp
+    LCDStatusBoard.cpp
     ObjectIds.hpp
     ObjectIds.cpp
     VRam.hpp
