--- a/Source/config.h.in
+++ b/Source/config.h.in
@@ -12,3 +12,4 @@
 #cmakedefine01 USE_SDL2_SOUND
 #cmakedefine01 USE_SDL2_IO
 #cmakedefine BUILD_NUMBER "@BUILD_NUMBER@"
+#cmakedefine CI_PROVIDER "@CI_PROVIDER@"
