--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,8 +16,8 @@ build_script:
  - cd build
  - echo %platform%
  - echo %APPVEYOR_BUILD_NUMBER%
- - if %platform%==x64 (cmake .. -DSDL2_DIR=c:\relive\SDL2-2.0.9 -DBUILD_NUMBER=%APPVEYOR_BUILD_NUMBER% -DCI_PROVIDER="AppVeyor" -G "Visual Studio 15 2017 Win64")
- - if %platform%==x86 (cmake .. -DSDL2_DIR=c:\relive\SDL2-2.0.9 -DBUILD_NUMBER=%APPVEYOR_BUILD_NUMBER% -DCI_PROVIDER="AppVeyor" -G "Visual Studio 15 2017")
+ - if %platform%==x64 (cmake .. -DSDL2_DIR=c:\relive\SDL2-2.0.9 -DBUILD_NUMBER=%APPVEYOR_BUILD_NUMBER% -DCI_PROVIDER=AppVeyor -G "Visual Studio 15 2017 Win64")
+ - if %platform%==x86 (cmake .. -DSDL2_DIR=c:\relive\SDL2-2.0.9 -DBUILD_NUMBER=%APPVEYOR_BUILD_NUMBER% -DCI_PROVIDER=AppVeyor -G "Visual Studio 15 2017")
  - cmake --build . --config %configuration% -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
  - call "C:\Program Files (x86)\cmake\bin\cpack" -G ZIP -C %configuration%
 
