--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ jobs:
         cd build
         cmake .. -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DBUILD_NUMBER=$(Build.BuildId) -DCI_PROVIDER="Azure DevOps" -DSDL2_DIR=C:\Temp\SDL2-2.0.9 -G "Visual Studio 16 2019" -A Win32
         cmake --build .
-        cpack.exe -G ZIP -C X86
+        cpack.exe -G ZIP -C Debug
   - publish: $(System.DefaultWorkingDirectory)/build/relive-0.1-win32.zip
     artifact: RELIVE-Windows32.zip
 - job: Windows64
@@ -71,6 +71,6 @@ jobs:
         cd build
         cmake .. -DBUILD_NUMBER=$(Build.BuildId) -DCI_PROVIDER="Azure DevOps" -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DSDL2_DIR=C:\Temp\SDL2-2.0.9 -G "Visual Studio 16 2019" -A x64
         cmake --build .
-        cpack.exe -G ZIP -C X64
+        cpack.exe -G ZIP -C Debug
   - publish: $(System.DefaultWorkingDirectory)/build/relive-0.1-win64.zip
     artifact: RELIVE-Windows64.zip
