--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -74,3 +74,43 @@ target_include_directories(googletest PUBLIC
 
 export(TARGETS googletest FILE googletest.cmake)
 set_property(TARGET googletest PROPERTY FOLDER "3rdParty")
+
+# dear imgui lib
+add_library(imgui
+    imgui/imgui.cpp
+    imgui/imgui_draw.cpp
+	imgui/imgui_tables.cpp
+	imgui/imgui_widgets.cpp
+	imgui/imgui_demo.cpp
+	imgui/backends/imgui_impl_sdl.cpp
+	imgui/backends/imgui_impl_opengl3.cpp
+    )
+	
+target_link_libraries(imgui
+	libglew_static
+    ${SDL2_LIBRARIES}
+    )
+
+target_include_directories(imgui PUBLIC
+    $<BUILD_INTERFACE:
+    ${CMAKE_CURRENT_SOURCE_DIR}/imgui;
+	${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends;
+    )
+add_compile_definitions(IMGUI_IMPL_OPENGL_LOADER_GLEW)
+export(TARGETS imgui FILE imgui.cmake)
+set_property(TARGET imgui PROPERTY FOLDER "3rdParty")
+
+option(glew-cmake_BUILD_SHARED "" OFF)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/glew-cmake)
+set_property(TARGET libglew_static PROPERTY FOLDER "3rdParty")
+export(TARGETS libglew_static FILE libglew_static.cmake)
+
+# glm
+add_library(glm INTERFACE)
+
+target_include_directories(glm INTERFACE
+    $<BUILD_INTERFACE:
+    ${CMAKE_CURRENT_SOURCE_DIR}/glm;
+    )
+export(TARGETS glm FILE glm.cmake)
+set_property(TARGET glm PROPERTY FOLDER "3rdParty")
