--- a/Source/AliveLibAO/CMakeLists.txt
+++ b/Source/AliveLibAO/CMakeLists.txt
@@ -382,6 +382,9 @@ target_link_libraries(AliveLibAO
     EasyLogging++
     googletest
     Cinder
+	libglew_static
+	imgui
+	glm
     ${WIN32_LIBS}
     ${SDL2_LIBRARIES}
     )
