--- a/Source/config.h.in
+++ b/Source/config.h.in
@@ -11,5 +11,6 @@
 #cmakedefine01 USE_SDL2
 #cmakedefine01 USE_SDL2_SOUND
 #cmakedefine01 USE_SDL2_IO
+#cmakedefine01 RENDERER_OPENGL
 #cmakedefine BUILD_NUMBER @BUILD_NUMBER@
 #cmakedefine CI_PROVIDER "@CI_PROVIDER@"
