--- a/Source/Tools/alive_api/CMakeLists.txt
+++ b/Source/Tools/alive_api/CMakeLists.txt
@@ -20,6 +20,8 @@ set(alive_api_src
     alive_api.hpp
     TypesCollection.hpp
     TypesCollection.cpp
+    TypesCollectionAO.cpp
+    TypesCollectionAE.cpp
     JsonDocument.cpp
     JsonDocument.hpp
     JsonUpgrader.hpp
