--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,11 +92,18 @@ if(NOT MSVC)
         "${CMAKE_CURRENT_SOURCE_DIR}/Source/AliveLibCommon/pch_shared.h"
     )
 
-    target_precompile_headers(AliveLibAO REUSE_FROM AliveLibCommon)
     target_precompile_headers(AliveLibAE REUSE_FROM AliveLibCommon)
     target_precompile_headers(AliveExe REUSE_FROM AliveLibCommon)
-    target_precompile_headers(AliveExeAO REUSE_FROM AliveLibCommon)
     target_precompile_headers(AliveExeAE REUSE_FROM AliveLibCommon)
+
+    # AO needs its own PCH because of different `BEHAVIOUR_CHANGE_FORCE_WINDOW_MODE`
+    # defines with `AliveLibCommon`
+    target_precompile_headers(
+        AliveLibAO PRIVATE
+        "${CMAKE_CURRENT_SOURCE_DIR}/Source/AliveLibCommon/pch_shared.h"
+    )
+
+    target_precompile_headers(AliveExeAO REUSE_FROM AliveLibAO)
     # `vab_tool`, `alive_api`, and `alive_api_test` targets cannot make use of PCH
     # due to `CMAKE_CXX_EXTENSIONS` being set to `OFF`
 endif()
