--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/assets)
 # Setup unity builds
 set_target_properties(AliveLibCommon PROPERTIES UNITY_BUILD ON)
 set_target_properties(AliveLibAE     PROPERTIES UNITY_BUILD ON)
+set_target_properties(AliveLibAO     PROPERTIES UNITY_BUILD ON)
 # -----------------------------------------------------------------------------
 
 
