Enable unity builds for remaining libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,9 +70,21 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/assets)
 
 # -----------------------------------------------------------------------------
 # Setup unity builds
+set_target_properties(Cinder        PROPERTIES UNITY_BUILD ON)
+set_target_properties(EasyLogging++ PROPERTIES UNITY_BUILD ON)
+set_target_properties(jsonxx        PROPERTIES UNITY_BUILD ON)
+set_target_properties(googletest    PROPERTIES UNITY_BUILD ON)
+set_target_properties(imgui         PROPERTIES UNITY_BUILD ON)
+set_target_properties(glm         PROPERTIES UNITY_BUILD ON)
+
 set_target_properties(AliveLibCommon PROPERTIES UNITY_BUILD ON)
 set_target_properties(AliveLibAE     PROPERTIES UNITY_BUILD ON)
 set_target_properties(AliveLibAO     PROPERTIES UNITY_BUILD ON)
+set_target_properties(AliveExe       PROPERTIES UNITY_BUILD ON)
+set_target_properties(AliveExeAO     PROPERTIES UNITY_BUILD ON)
+set_target_properties(AliveExeAE     PROPERTIES UNITY_BUILD ON)
+set_target_properties(alive_api      PROPERTIES UNITY_BUILD OFF) # too big
+set_target_properties(alive_api_test PROPERTIES UNITY_BUILD OFF) # too big
 # -----------------------------------------------------------------------------
 
 
