--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,9 +28,9 @@ install:
 
 after_build:
  - ps: if($env:APPVEYOR_PULL_REQUEST_NUMBER) { $env:PR_STR = "_PR$env:APPVEYOR_PULL_REQUEST_NUMBER" } else {  $env:PR_STR = "" }
- - 7z a RELIVE_Symbols%PR_STR%_%CONFIGURATION%_%PLATFORM%_%APPVEYOR_BUILD_NUMBER%.zip c:\relive\build\Source\AliveDllAE\%CONFIGURATION%\AliveDllAE.pdb c:\relive\build\Source\AliveDllAO\%CONFIGURATION%\AliveDllAO.pdb c:\relive\build\Source\AliveExe\%CONFIGURATION%\AliveExe.pdb c:\relive\build\Source\AliveExe\%CONFIGURATION%\AliveExeAO.pdb c:\relive\build\Source\AliveExe\%CONFIGURATION%\AliveExeAE.pdb
+ - 7z a RELIVE_Symbols%PR_STR%_%CONFIGURATION%_%PLATFORM%_%APPVEYOR_BUILD_NUMBER%.zip c:\relive\build\Source\AliveDllAE\%CONFIGURATION%\AliveDllAE.pdb c:\relive\build\Source\AliveDllAO\%CONFIGURATION%\AliveDllAO.pdb c:\relive\build\Source\AliveExe\%CONFIGURATION%\AliveExe.pdb 
  - rename relive-*.zip RELIVE_Binaries_Full%PR_STR%_%CONFIGURATION%_%PLATFORM%_%APPVEYOR_BUILD_NUMBER%.zip
- - 7z a RELIVE_Binaries_Lite%PR_STR%_%CONFIGURATION%_%PLATFORM%.zip c:\relive\build\Source\AliveExe\%CONFIGURATION%\AliveExeAO.exe c:\relive\build\Source\AliveExe\%CONFIGURATION%\AliveExeAE.exe c:\relive\build\Source\AliveDllAE\%CONFIGURATION%\SDL2.dll
+ - 7z a RELIVE_Binaries_Lite%PR_STR%_%CONFIGURATION%_%PLATFORM%.zip c:\relive\build\Source\AliveExe\%CONFIGURATION%\AliveExe.exe c:\relive\build\Source\AliveDllAE\%CONFIGURATION%\SDL2.dll
 
 artifacts:
  - path: build\RELIVE_Symbols*.zip
