--- a/Source/AliveExe/CMakeLists.txt
+++ b/Source/AliveExe/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(AliveExe WIN32
     resource.rc
     resource.h
     app.ico)
+  set_target_properties(AliveExe PROPERTIES OUTPUT_NAME "relive")
 target_include_directories(AliveExe PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
@@ -19,7 +20,7 @@ target_compile_features(AliveExe
 target_compile_definitions(AliveExe PRIVATE "_CRT_SECURE_NO_WARNINGS")
 target_link_libraries(AliveExe AliveLibAE AliveLibAO)
 export(TARGETS AliveExe FILE AliveExe.cmake)
-install(TARGETS AliveExe DESTINATION "${BINPATH}")
+install(TARGETS AliveExe DESTINATION "${BINPATH}" RENAME relive)
 
 if (MSVC)
     target_compile_options(AliveExe PRIVATE /W4 /wd4996 /WX /MP)
