--- a/Source/config.h.in
+++ b/Source/config.h.in
@@ -4,6 +4,7 @@
 #cmakedefine01 BEHAVIOUR_CHANGE_FORCE_WINDOW_MODE
 #cmakedefine01 BEHAVIOUR_CHANGE_SUB_DATA_FOLDERS
 #cmakedefine01 ORIGINAL_PS1_BEHAVIOR
+#cmakedefine01 ORIGINAL_GAME_FIXES
 #cmakedefine01 FORCE_DDCHEAT
 #cmakedefine01 LCD_PS1_SPEED
 #cmakedefine01 XINPUT_SUPPORT
