--- a/Source/config.h.in
+++ b/Source/config.h.in
@@ -5,6 +5,7 @@
 #cmakedefine01 BEHAVIOUR_CHANGE_SUB_DATA_FOLDERS
 #cmakedefine01 ORIGINAL_PS1_BEHAVIOR
 #cmakedefine01 ORIGINAL_GAME_FIXES
+#cmakedefine01 ORIGINAL_GAME_FIX_AUTO_TURN
 #cmakedefine01 FORCE_DDCHEAT
 #cmakedefine01 LCD_PS1_SPEED
 #cmakedefine01 XINPUT_SUPPORT
