Fixes Death Delay Glitch

--- a/Source/config.h.in
+++ b/Source/config.h.in
@@ -6,6 +6,7 @@
 #cmakedefine01 ORIGINAL_PS1_BEHAVIOR
 #cmakedefine01 ORIGINAL_GAME_FIXES
 #cmakedefine01 ORIGINAL_GAME_FIX_AUTO_TURN
+#cmakedefine01 ORIGINAL_GAME_FIX_DEATH_DELAY
 #cmakedefine01 FORCE_DDCHEAT
 #cmakedefine01 LCD_PS1_SPEED
 #cmakedefine01 XINPUT_SUPPORT
