Added MISC_PC_MENU_FIXES cmake option, cleaned up

--- a/Source/config.h.in
+++ b/Source/config.h.in
@@ -4,6 +4,7 @@
 #cmakedefine01 BEHAVIOUR_CHANGE_FORCE_WINDOW_MODE
 #cmakedefine01 BEHAVIOUR_CHANGE_SUB_DATA_FOLDERS
 #cmakedefine01 AUTO_SWITCH_CONTROLLER
+#cmakedefine01 MISC_PC_MENU_FIXES
 #cmakedefine01 ORIGINAL_PS1_BEHAVIOR
 #cmakedefine01 ORIGINAL_GAME_FIXES
 #cmakedefine01 ORIGINAL_GAME_FIX_AUTO_TURN
