split AO `RockSack` class into a seperate file

--- a/Source/AliveLibAO/CMakeLists.txt
+++ b/Source/AliveLibAO/CMakeLists.txt
@@ -103,6 +103,8 @@ SET(AliveLibSrcAO
    Throwable.cpp
    Rock.hpp
    Rock.cpp
+   RockSack.hpp
+   RockSack.cpp
    BackgroundGlukkon.hpp
    BackgroundGlukkon.cpp
    ThrowableTotalIndicator.hpp
