--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -307,8 +307,8 @@ SET(AliveLibAESrc
     MovingBomb.cpp
     DoorFlame.cpp
     DoorFlame.hpp
-    NakedSlig.cpp
-    NakedSlig.hpp
+    CrawlingSlig.cpp
+    CrawlingSlig.hpp
     SnoozeParticle.cpp
     SnoozeParticle.hpp
     Fleech.cpp
@@ -327,8 +327,8 @@ SET(AliveLibAESrc
     GlukkonSwitch.cpp
     Bullet.hpp
     Bullet.cpp
-    NakedSligButton.hpp
-    NakedSligButton.cpp
+    CrawlingSligButton.hpp
+    CrawlingSligButton.cpp
     SligGetPantsAndWings.hpp
     SligGetPantsAndWings.cpp
     BoomMachine.hpp
