can't use project_warnings in relive_api since it doesn't exist for anyone consuming the project

--- a/Source/Tools/relive_api/CMakeLists.txt
+++ b/Source/Tools/relive_api/CMakeLists.txt
@@ -134,8 +134,7 @@ target_link_libraries(relive_api
     easylogging_reliveapi
     AliveLibCommon_reliveapi
     AliveLibAO_reliveapi
-    AliveLibAE_reliveapi
-    project_warnings)
+    AliveLibAE_reliveapi)
 
 export(TARGETS relive_api FILE relive_api.cmake)
 
