make FG1 reading code common between AO/AE/API, ditto for type 4/5 decompression code. VS2022 warning/build fixes.

--- a/Source/AliveLibCommon/CMakeLists.txt
+++ b/Source/AliveLibCommon/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(AliveLibCommon VERSION 0.1 LANGUAGES CXX)
 
 SET(AliveLibSrcCommon
+    CompressionType_4Or5.cpp
+    CompressionType_4Or5.hpp
+    FG1Reader.hpp
     ExportHooker.hpp
     ExportHooker.cpp
     CamDecompressor.cpp
