--- a/Source/Tools/relive_api/CMakeLists.txt
+++ b/Source/Tools/relive_api/CMakeLists.txt
@@ -70,6 +70,8 @@ export(TARGETS AliveLibCommon_reliveapi FILE AliveLibCommon_reliveapi.cmake)
 set_property(TARGET AliveLibCommon_reliveapi PROPERTY FOLDER "ReliveAPI")
 
 set(relive_api_src
+    ApiFG1Reader.hpp
+    ApiFG1Reader.cpp
     Base64.hpp
     Base64.cpp
     CamConverter.hpp
